--- a/index.html
+++ b/index.html
@@ -20,15 +20,32 @@
 </head>
 <body class="antialiased" id="particles">
   <nav class="gill-sans f6 ttu absolute w-100 bg-cl-dark-blue white bb b--white-10 z-1">
-    <ul class="list ph4 ph5-ns">
-      <li class="dib bb bw1 mr4 white pv3" style="margin-bottom: -1px"><span class="tracked-mega">Abou</span>t</li>
-      <li class="dib mr4"><a href="/work" class="link white-70 hover-white pv3 "><span class="tracked-mega">Wor</span>k</a></li>
-      <li class="dib mr4"><a href="/posts" class="link white-70 hover-white pv3"><span class="tracked-mega">Writin</span>g</a></li>
+    <ul class="list ph4 ph5-ns flex flex-row cl-mw center items-center">
+      <li class="dib flex-auto mr4" style="margin-bottom: -2px;">
+        <div class="dib bb bw1 white pv3">
+          <span class="tracked-mega">Chris Le</span>e
+        </div>
+      </li>
+      <li class="dib mr4">
+        <a href="/work" class="link white-70 hover-white pv3"
+          ><span class="tracked-mega">Wor</span>k</a
+        >
+      </li>
+      <li class="dib mr4">
+        <a href="/posts" class="link white-70 hover-white pv3"
+          ><span class="tracked-mega">Writin</span>g</a
+        >
+      </li>
+      <li class="dib mr4">
+        <a href="/about" class="link white-70 hover-white pv3"
+          ><span class="tracked-mega">Abou</span>t</a
+        >
+      </li>
     </ul>
   </nav>
   <main class="charter lh-copy">
-    <section class="dt w-100 min-vh-100 pa4 pv5 pa5-ns bg-cl-dark-blue white">
-      <div class="dtc v-mid">
+    <section class="flex items-center w-100 min-vh-100 bg-cl-dark-blue white">
+      <div class="w-100 cl-mw center pa4 pv5 pa5-ns">
         <h1 class="self-name f3 cl-cyan ttu tracked-mega mb1">Chris Lee</h1>
         <p class="self-description mb5">Designer, Uber Eats</p>
         <ul class="list pl0">
@@ -39,26 +56,28 @@
       </div>
     </section>
     <section class="min-vh-100 pa4 pv5 pa5-ns bg-cl-red-gradient cl-light-salmon">
-      <blockquote class="mt4 mb5">
-        <div class="f4-l mb3 lh-large measure-wide">
-          <p class="mb3"><strong class="white">The work has enough love when enthusiasm transfers from the maker to the audience and bonds them.</strong> Both are enthusiastic about the design.</p>
-          <p>I can imagine the excitement in the room when Stradivari would hand his newest violin to a skilled musician, because the violinist would <strong class="white">unlock the instrument’s full potential by playing it</strong>. The products of design, like Stradivari’s violins, possess an aspect that can only be revealed through their use.</p>
-        </div>
-        <cite class="cl-salmon">
-          <p class="gill-sans f6 ttu tracked-mega">Frank Chimero</p>
-          <p class="i">The Shape of Design</p>
-        </cite>
-      </blockquote>
-      <blockquote class="mb4">
-        <div class="f4-l mb3 lh-large measure-wide">
-          <p class="mb3">The violin-maker has made beautiful instruments, and has called musicians to make wonderful music with them; but the musicians have refused, and have tried to play tunes on bits of scrappy wood and grass they have found lying about the place.</p>
-          <p>It is no good the violin-maker wringing his hands and deciding to do without the musicians; they are needed if the violins are to make the music they are supposed to make. He has to set about <strong class="white">rescuing the musicians from their folly</strong>, not just for their own sake (because it’s frustrating and dishonouring for them to try to get music out of lifeless objects) but because <strong class="white">they are needed precisely to make the wonderful music he had in mind all along</strong>.</p>
-        </div>
-        <cite class="cl-salmon">
-          <p class="gill-sans f6 ttu tracked-mega">NT Wright</p>
-          <p class="i">Paul and the Faithfulness of God</p>
-        </cite>
-      </blockquote>
+      <div class="w-100 cl-mw center pa4 pv5 pa5-ns">
+        <blockquote class="mt4 mb5">
+          <div class="f4-l mb3 lh-large">
+            <p class="mb3"><strong class="white">The work has enough love when enthusiasm transfers from the maker to the audience and bonds them.</strong> Both are enthusiastic about the design.</p>
+            <p>I can imagine the excitement in the room when Stradivari would hand his newest violin to a skilled musician, because the violinist would <strong class="white">unlock the instrument’s full potential by playing it</strong>. The products of design, like Stradivari’s violins, possess an aspect that can only be revealed through their use.</p>
+          </div>
+          <cite class="cl-salmon">
+            <p class="gill-sans f6 ttu tracked-mega">Frank Chimero</p>
+            <p class="i">The Shape of Design</p>
+          </cite>
+        </blockquote>
+        <blockquote class="mb4">
+          <div class="f4-l mb3 lh-large">
+            <p class="mb3">The violin-maker has made beautiful instruments, and has called musicians to make wonderful music with them; but the musicians have refused, and have tried to play tunes on bits of scrappy wood and grass they have found lying about the place.</p>
+            <p>It is no good the violin-maker wringing his hands and deciding to do without the musicians; they are needed if the violins are to make the music they are supposed to make. He has to set about <strong class="white">rescuing the musicians from their folly</strong>, not just for their own sake (because it’s frustrating and dishonouring for them to try to get music out of lifeless objects) but because <strong class="white">they are needed precisely to make the wonderful music he had in mind all along</strong>.</p>
+          </div>
+          <cite class="cl-salmon">
+            <p class="gill-sans f6 ttu tracked-mega">NT Wright</p>
+            <p class="i">Paul and the Faithfulness of God</p>
+          </cite>
+        </blockquote>
+      </div>
     </section>
   </main>
   <script src="particles.min.js"></script>
