--- a/posts.html
+++ b/posts.html
@@ -32,19 +32,26 @@
   </head>
   <body class="bg-near-white dark-gray">
     <nav class="gill-sans f6 ttu w-100 bb b--black-10">
-      <ul class="list ph4 ph5-ns">
-        <li class="dib mr4">
-          <a href="/" class="link mid-gray hover-cl-blue pv3"
-            ><span class="tracked-mega">Abou</span>t</a
+      <ul class="list ph4 ph5-ns flex flex-row cl-mw center items-center">
+        <li class="dib mr4 flex-auto">
+          <a href="/" class="link mid-gray hover-orange pv3"
+            ><span class="tracked-mega">Chris Le</span>e</a
           >
         </li>
-        <li class="dib mr4" style="margin-bottom: -1px;">
-          <a href="/work" class="link mid-gray hover-cl-blue pv3"
+        <li class="dib mr4">
+          <a href="/work" class="link mid-gray hover-orange pv3"
             ><span class="tracked-mega">Wor</span>k</a
           >
         </li>
-        <li class="dib mr4 bb bw1 dark-gray pv3" style="margin-bottom: -1px;">
-          <span class="tracked-mega">Writin</span>g
+        <li class="dib mr4 bb bw1 dark-gray pv3" style="margin-bottom: -2px;">
+          <a href="/posts" class="link mid-gray hover-orange pv3"
+            ><span class="tracked-mega">Writin</span>g</a
+          >
+        </li>
+        <li class="dib mr4">
+          <a href="/about" class="link mid-gray hover-orange pv3"
+            ><span class="tracked-mega">Abou</span>t</a
+          >
         </li>
       </ul>
     </nav>
