Add about page and refresh nav

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <nav class="gill-sans f6 ttu absolute w-100 bg-cl-dark-blue white bb b--white-10 z-1">
     <ul class="list ph4 ph5-ns flex flex-row cl-mw center items-center">
       <li class="dib flex-auto mr4" style="margin-bottom: -2px;">
-        <div class="dib bb bw1 white pv3">
+        <div class="dib fw6 bb bw1 white pv3">
           <span class="tracked-mega">Chris Le</span>e
         </div>
       </li>
@@ -36,7 +36,7 @@
           ><span class="tracked-mega">Writin</span>g</a
         >
       </li>
-      <li class="dib mr4">
+      <li class="dib">
         <a href="/about" class="link white-70 hover-white pv3"
           ><span class="tracked-mega">Abou</span>t</a
         >
