--- a/posts.html
+++ b/posts.html
@@ -39,16 +39,19 @@
           >
         </li>
         <li class="dib mr4">
-          <a href="/work" class="link mid-gray hover-orange pv3"
+          <a href="/work" class="link mid-gray hover-cl-blue pv3"
             ><span class="tracked-mega">Wor</span>k</a
           >
         </li>
-        <li class="dib mr4 bb bw1 dark-gray pv3" style="margin-bottom: -2px;">
-          <a href="/posts" class="link mid-gray hover-orange pv3"
+        <li
+          class="dib mr4 fw6 bb bw1 dark-gray pv3"
+          style="margin-bottom: -2px;"
+        >
+          <a href="/posts" class="link mid-gray hover-cl-blue pv3"
             ><span class="tracked-mega">Writin</span>g</a
           >
         </li>
-        <li class="dib mr4">
+        <li class="dib">
           <a href="/about" class="link mid-gray hover-orange pv3"
             ><span class="tracked-mega">Abou</span>t</a
           >
