--- a/work.html
+++ b/work.html
@@ -26,7 +26,7 @@
           ><span class="tracked-mega">Chris Le</span>e</a
         >
       </li>
-      <li class="dib mr4 bb bw1 dark-gray pv3" style="margin-bottom: -2px;">
+      <li class="dib mr4 fw6 bb bw1 dark-gray pv3" style="margin-bottom: -2px;">
         <span class="tracked-mega">Wor</span>k
       </li>
       <li class="dib mr4">
@@ -34,7 +34,7 @@
           ><span class="tracked-mega">Writin</span>g</a
         >
       </li>
-      <li class="dib mr4">
+      <li class="dib">
         <a href="/about" class="link mid-gray hover-orange pv3"
           ><span class="tracked-mega">Abou</span>t</a
         >
@@ -43,22 +43,21 @@
   </nav>
   <main class="charter f6 lh-copy cl-mw center pa4 pt4 pa5-ns">
     <section class="mb5 pb5 bb b--black-10">
-      <h1 class="f3 ttu orange tracked-mega mb3">Chris Lee</h1>
-      <p class="f3 lh-large mb4">Real decisions aren't simple. I solve complex problems through a combination of curiosity, creativity, and analytical decision-making.</p>
+      <p class="f3 lh-large mb4">Real decisions aren't simple. I solve complex problems through a combination of <strong class="orange fw6">curiosity</strong>, <strong class="orange fw6">creativity</strong>, and <strong class="orange fw6">analytical decision-making</strong>.</p>
       <div class="cf flex">
         <div class="w-100">
           <ul class="list">
-            <li>Product strategy</li>
-            <li>Interaction design</li>
-            <li>Motion design</li>
-            <li>Prototyping</li>
+            <li class="mv1">Product strategy</li>
+            <li class="mv1">Interaction design</li>
+            <li class="mv1">Motion design</li>
+            <li class="mv1">Prototyping</li>
           </ul>
         </div>
         <div class="w-100">
           <ul class="list">
-            <li><a href="mailto:chris@chrsl.net" class="dark-gray hover-orange">chris@chrsl.net</a></li>
-            <li><a href="https://twitter.com/cleerview" class="dark-gray hover-orange">Twitter</a></li>
-            <li><a href="https://www.linkedin.com/in/cleer/" class="dark-gray hover-orange">LinkedIn</a></li>
+            <li class="mv1"><a href="mailto:chris@chrsl.net" class="dark-gray hover-orange">chris@chrsl.net</a></li>
+            <li class="mv1"><a href="https://twitter.com/cleerview" class="dark-gray hover-orange">Twitter</a></li>
+            <li class="mv1"><a href="https://www.linkedin.com/in/cleer/" class="dark-gray hover-orange">LinkedIn</a></li>
           </ul>
         </div>
       </div>
@@ -150,7 +149,7 @@
       <section class="ph2 pb5 w-50-ns fl-ns">
         <div class="cf mb3">
           <img src="images/ymf-icon.png" class="w-icon fl mr3 br-icon shadow-icon">
-          <h2 class="fw6">You and Me Forever</h2>
+          <h2 class="b">You and Me Forever</h2>
           <p>Crazy Love. 2014 to 2015.</p>
         </div>
         <p class="lh-large">App design for book by bestselling Christian author Francis Chan. Proceeds benefit work against <a href="https://vimeo.com/107938492" class="dark-gray hover-orange">poverty-induced prostitution</a> in Ethiopia.</p>
