Styling tweaks + horizontal scrolling mobile nav

--- a/about.html
+++ b/about.html
@@ -29,32 +29,34 @@
   </head>
   <body class="bg-near-white dark-gray">
     <nav class="gill-sans f6 ttu w-100 bb b--black-10">
-      <ul class="list ph4 ph5-ns flex flex-row cl-mw center items-center">
+      <ul
+        class="list ph4 ph5-ns flex-ns flex-row cl-mw center items-center nowrap overflow-auto"
+      >
         <li class="dib mr4 flex-auto">
-          <a href="/" class="link mid-gray hover-green pv3"
+          <a href="/" class="link mid-gray hover-cl-blue pv3"
             ><span class="tracked-mega">Chris Le</span>e</a
           >
         </li>
         <li class="dib mr4">
-          <a href="/work" class="link mid-gray hover-green pv3"
+          <a href="/work" class="link mid-gray hover-cl-blue pv3"
             ><span class="tracked-mega">Wor</span>k</a
           >
         </li>
         <li class="dib mr4">
-          <a href="/posts" class="link mid-gray hover-green pv3"
+          <a href="/posts" class="link mid-gray hover-cl-blue pv3"
             ><span class="tracked-mega">Writin</span>g</a
           >
         </li>
-        <li class="dib fw6 bb bw1 dark-gray pv3" style="margin-bottom: -2px;">
+        <li class="dib fw6 bb bw1 dark-gray pv3" style="margin-top: 2px;">
           <span class="tracked-mega">Abou</span>t
         </li>
       </ul>
     </nav>
     <main class="charter f6 lh-copy cl-mw center pa4 pt4 pa5-ns">
       <div class="flex-l items-start">
-        <img src="/images/photo.jpg" style="max-width: 24rem;" />
+        <img src="/images/photo.jpg" class="w-100" style="max-width: 24rem;" />
         <div class="flex-auto pt3 pt0-l pl4-l">
-          <p class="mb2 f4">
+          <p class="mb3 f4 f3-ns">
             I'm a human interested in:
           </p>
           <ul class="mb4 list list-hyphen">
