--- a/work.html
+++ b/work.html
@@ -20,22 +20,22 @@
 </head>
 <body class="bg-near-white dark-gray">
   <nav class="gill-sans f6 ttu w-100 bb b--black-10 ">
-    <ul class="list ph4 ph5-ns flex flex-row cl-mw center items-center">
+    <ul class="list ph4 ph5-ns flex-ns flex-row cl-mw center items-center nowrap overflow-auto">
       <li class="dib mr4 flex-auto">
-        <a href="/" class="link mid-gray hover-orange pv3"
+        <a href="/" class="link mid-gray hover-cl-blue pv3"
           ><span class="tracked-mega">Chris Le</span>e</a
         >
       </li>
-      <li class="dib mr4 fw6 bb bw1 dark-gray pv3" style="margin-bottom: -2px;">
+      <li class="dib mr4 fw6 bb bw1 dark-gray pv3" style="margin-top: 2px">
         <span class="tracked-mega">Wor</span>k
       </li>
       <li class="dib mr4">
-        <a href="/posts" class="link mid-gray hover-orange pv3"
+        <a href="/posts" class="link mid-gray hover-cl-blue pv3"
           ><span class="tracked-mega">Writin</span>g</a
         >
       </li>
       <li class="dib">
-        <a href="/about" class="link mid-gray hover-orange pv3"
+        <a href="/about" class="link mid-gray hover-cl-blue pv3"
           ><span class="tracked-mega">Abou</span>t</a
         >
       </li>
@@ -43,7 +43,7 @@
   </nav>
   <main class="charter f6 lh-copy cl-mw center pa4 pt4 pa5-ns">
     <section class="mb5 pb5 bb b--black-10">
-      <p class="f3 lh-large mb4">Real decisions aren't simple. I solve complex problems through a combination of <strong class="orange fw6">curiosity</strong>, <strong class="orange fw6">creativity</strong>, and <strong class="orange fw6">analytical decision-making</strong>.</p>
+      <p class="f4 f3-ns lh-large mb4">Real decisions aren't simple. I solve complex problems through a combination of <strong class="cl-blue fw6">curiosity</strong>, <strong class="cl-blue fw6">creativity</strong>, and <strong class="cl-blue fw6">analytical decision-making</strong>.</p>
       <div class="cf flex">
         <div class="w-100">
           <ul class="list">
@@ -55,9 +55,9 @@
         </div>
         <div class="w-100">
           <ul class="list">
-            <li class="mv1"><a href="mailto:chris@chrsl.net" class="dark-gray hover-orange">chris@chrsl.net</a></li>
-            <li class="mv1"><a href="https://twitter.com/cleerview" class="dark-gray hover-orange">Twitter</a></li>
-            <li class="mv1"><a href="https://www.linkedin.com/in/cleer/" class="dark-gray hover-orange">LinkedIn</a></li>
+            <li class="mv1"><a href="mailto:chris@chrsl.net" class="dark-gray hover-cl-blue">chris@chrsl.net</a></li>
+            <li class="mv1"><a href="https://twitter.com/cleerview" class="dark-gray hover-cl-blue">Twitter</a></li>
+            <li class="mv1"><a href="https://www.linkedin.com/in/cleer/" class="dark-gray hover-cl-blue">LinkedIn</a></li>
           </ul>
         </div>
       </div>
@@ -85,7 +85,7 @@
         <div class="mv4 sw-100 bg-black-05 pa3">
           <div class="pa3">
             <h3 class="fw6">Tabs & tab groups</h3>
-            <p class="lh-large">Even as computing has gone mobile, we often fall back to our desktop computers for complex tasks like buying a new pair of shoes or planning a trip. I led a redesign of Chrome's tabs experience to help you get these things done on the go. Featured on the <a href="https://blog.google/products/chrome/get-more-done-with-google-chrome/" class="dark-gray hover-orange">Google blog</a>.</p>
+            <p class="lh-large">Even as computing has gone mobile, we often fall back to our desktop computers for complex tasks like buying a new pair of shoes or planning a trip. I led a redesign of Chrome's tabs experience to help you get these things done on the go. Featured on the <a href="https://blog.google/products/chrome/get-more-done-with-google-chrome/" class="dark-gray hover-cl-blue">Google blog</a>.</p>
           </div>
           <div class="flex-l">
             <div class="w-100 pa3">
@@ -127,7 +127,7 @@
           <h2 class="fw6">AfriScout</h2>
           <p>Google.org & PCI Global. August 2016.</p>
         </div>
-        <p class="lh-large">App design for <a href="https://www.pciglobal.org/afriscout/" class="dark-gray hover-orange">mapping application</a> empowering African pastoralists to find pasture.</p>
+        <p class="lh-large">App design for <a href="https://www.pciglobal.org/afriscout/" class="dark-gray hover-cl-blue">mapping application</a> empowering African pastoralists to find pasture.</p>
       </section>
       <section class="ph2 pb5 w-50-ns fl-ns">
         <div class="cf mb3">
@@ -135,7 +135,7 @@
           <h2 class="fw6">Nepal Human Development Report</h2>
           <p>Google.org & Kathmandu Living Labs. July 2015.</p>
         </div>
-        <p class="lh-large">Website design and development for <a href="http://www.npc.gov.np/human_development_indicators_by_district/" class="dark-gray hover-orange">data visualization</a> built for the Nepal government. Presented at <a href="http://interaction16.ixda.org/session/assisting-nepal-after-the-earthquake-lessons-learned-from-applying-design-thinking-in-a-post-disaster-context/index.html" class="dark-gray hover-orange">Interaction 16</a>.
+        <p class="lh-large">Website design and development for <a href="http://www.npc.gov.np/human_development_indicators_by_district/" class="dark-gray hover-cl-blue">data visualization</a> built for the Nepal government. Presented at <a href="http://interaction16.ixda.org/session/assisting-nepal-after-the-earthquake-lessons-learned-from-applying-design-thinking-in-a-post-disaster-context/index.html" class="dark-gray hover-cl-blue">Interaction 16</a>.
       </section>
       <section class="ph2 pb5 w-50-ns fl-ns">
         <div class="cf mb3">
@@ -152,7 +152,7 @@
           <h2 class="b">You and Me Forever</h2>
           <p>Crazy Love. 2014 to 2015.</p>
         </div>
-        <p class="lh-large">App design for book by bestselling Christian author Francis Chan. Proceeds benefit work against <a href="https://vimeo.com/107938492" class="dark-gray hover-orange">poverty-induced prostitution</a> in Ethiopia.</p>
+        <p class="lh-large">App design for book by bestselling Christian author Francis Chan. Proceeds benefit work against <a href="https://vimeo.com/107938492" class="dark-gray hover-cl-blue">poverty-induced prostitution</a> in Ethiopia.</p>
       </section>
     </div>
   </main>
