--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 </head>
 <body class="antialiased" id="particles">
   <nav class="gill-sans f6 ttu absolute w-100 bg-cl-dark-blue white bb b--white-10 z-1">
-    <ul class="list ph4 ph5-ns flex flex-row cl-mw center items-center">
-      <li class="dib flex-auto mr4" style="margin-bottom: -2px;">
+    <ul class="list ph4 ph5-ns flex-ns flex-row cl-mw center items-center nowrap overflow-auto">
+      <li class="dib flex-auto mr4">
         <div class="dib fw6 bb bw1 white pv3">
           <span class="tracked-mega">Chris Le</span>e
         </div>
