--- a/posts.html
+++ b/posts.html
@@ -32,7 +32,9 @@
   </head>
   <body class="bg-near-white dark-gray">
     <nav class="gill-sans f6 ttu w-100 bb b--black-10">
-      <ul class="list ph4 ph5-ns flex flex-row cl-mw center items-center">
+      <ul
+        class="list ph4 ph5-ns flex-ns flex-row cl-mw center items-center nowrap overflow-auto"
+      >
         <li class="dib mr4 flex-auto">
           <a href="/" class="link mid-gray hover-orange pv3"
             ><span class="tracked-mega">Chris Le</span>e</a
@@ -43,16 +45,11 @@
             ><span class="tracked-mega">Wor</span>k</a
           >
         </li>
-        <li
-          class="dib mr4 fw6 bb bw1 dark-gray pv3"
-          style="margin-bottom: -2px;"
-        >
-          <a href="/posts" class="link mid-gray hover-cl-blue pv3"
-            ><span class="tracked-mega">Writin</span>g</a
-          >
+        <li class="dib mr4 fw6 bb bw1 dark-gray pv3" style="margin-top: 2px;">
+          <span class="tracked-mega">Writin</span>g
         </li>
         <li class="dib">
-          <a href="/about" class="link mid-gray hover-orange pv3"
+          <a href="/about" class="link mid-gray hover-cl-blue pv3"
             ><span class="tracked-mega">Abou</span>t</a
           >
         </li>
