--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 </head>
 <body class="antialiased" id="particles">
   <nav class="gill-sans f6 ttu absolute w-100 bg-cl-dark-blue white bb b--white-10 z-1">
-    <ul class="list ph4 ph5-ns flex-ns flex-row cl-mw center items-center nowrap overflow-auto">
+    <ul class="fw6 list ph4 ph5-ns flex-ns flex-row cl-mw center items-center nowrap overflow-auto">
       <li class="dib flex-auto mr4">
-        <div class="dib fw6 bb bw1 white pv3">
+        <div class="dib bb bw1 white pv3">
           <span class="tracked-mega">Chris Le</span>e
         </div>
       </li>
@@ -47,7 +47,7 @@
     <section class="flex items-center w-100 min-vh-100 bg-cl-dark-blue white">
       <div class="w-100 cl-mw center pa4 pv5 pa5-ns">
         <h1 class="self-name f3 cl-cyan ttu tracked-mega mb1">Chris Lee</h1>
-        <p class="self-description mb5">Designer, Uber Eats</p>
+        <p class="self-description mb5">Product Designer</p>
         <ul class="list pl0">
           <li class="mv2"><a href="mailto:chris@chrsl.net" class="link white-70 underline-hover">chris@chrsl.net<a/></li>
           <li class="mv2"><a href="https://twitter.com/cleerview" class="link white-70 underline-hover">Twitter<a/></li>
@@ -55,7 +55,7 @@
         </ul>
       </div>
     </section>
-    <section class="min-vh-100 pa4 pv5 pa5-ns bg-cl-red-gradient cl-light-salmon">
+    <section class="min-vh-100 bg-cl-red-gradient cl-light-salmon">
       <div class="w-100 cl-mw center pa4 pv5 pa5-ns">
         <blockquote class="mt4 mb5">
           <div class="f4-l mb3 lh-large">
