--- a/work.html
+++ b/work.html
@@ -20,22 +20,22 @@
 </head>
 <body class="bg-near-white dark-gray">
   <nav class="gill-sans f6 ttu w-100 bb b--black-10 ">
-    <ul class="list ph4 ph5-ns flex-ns flex-row cl-mw center items-center nowrap overflow-auto">
+    <ul class="fw6 list ph4 ph5-ns flex-ns flex-row cl-mw center items-center nowrap overflow-auto">
       <li class="dib mr4 flex-auto">
-        <a href="/" class="link mid-gray hover-cl-blue pv3"
+        <a href="/" class="link dark-gray hover-cl-blue pv3"
           ><span class="tracked-mega">Chris Le</span>e</a
         >
       </li>
-      <li class="dib mr4 fw6 bb bw1 dark-gray pv3" style="margin-top: 2px">
+      <li class="dib mr4 bb bw1 dark-gray pv3" style="margin-top: 2px">
         <span class="tracked-mega">Wor</span>k
       </li>
       <li class="dib mr4">
-        <a href="/posts" class="link mid-gray hover-cl-blue pv3"
+        <a href="/posts" class="link dark-gray hover-cl-blue pv3"
           ><span class="tracked-mega">Writin</span>g</a
         >
       </li>
       <li class="dib">
-        <a href="/about" class="link mid-gray hover-cl-blue pv3"
+        <a href="/about" class="link dark-gray hover-cl-blue pv3"
           ><span class="tracked-mega">Abou</span>t</a
         >
       </li>
@@ -66,7 +66,7 @@
       <div class="cf mb3 tl-ns">
         <img src="images/ubereats-icon.png" class="w-icon fl mr3 br-icon shadow-icon">
         <p><h2 class="fw6 di">Uber Eats</h2>, Senior Designer II</p>
-        <p>2020 to present.</p>
+        <p>2020 to present</p>
       </div>
       <p class="lh-large mb3">I design our menus experience, ranging from internal tools for restaurants to consumer ordering functionality.</p>
     </section>
@@ -74,7 +74,7 @@
       <div class="cf mb3 tl-ns">
         <img src="images/chrome-icon.png" class="w-icon fl mr3 br-icon shadow-icon">
         <p><h2 class="fw6 di">Google Chrome</h2>, Staff Designer</p>
-        <p>2013 to 2020.</p>
+        <p>2013 to 2020</p>
       </div>
       <p class="lh-large mb3">I started working on Chrome as new college grad, creating one of the world's most popular software products with about five other designers. Over my seven years there, the team grew to dozens - and I initiated and drove some of our most ambitious initiatives.</p>
       <blockquote class="mv3 bl bw1 b--black-10 pl3">
@@ -125,7 +125,7 @@
         <div class="cf mb3">
           <img src="images/afriscout-icon.png" class="w-icon fl mr3 br-icon shadow-icon">
           <h2 class="fw6">AfriScout</h2>
-          <p>Google.org & PCI Global. August 2016.</p>
+          <p>Google.org & PCI Global · August 2016</p>
         </div>
         <p class="lh-large">App design for <a href="https://www.pciglobal.org/afriscout/" class="dark-gray hover-cl-blue">mapping application</a> empowering African pastoralists to find pasture.</p>
       </section>
@@ -133,7 +133,7 @@
         <div class="cf mb3">
           <img src="images/nepal-icon.png" class="w-icon fl mr3 br-icon shadow-icon">
           <h2 class="fw6">Nepal Human Development Report</h2>
-          <p>Google.org & Kathmandu Living Labs. July 2015.</p>
+          <p>Google.org & Kathmandu Living Labs · July 2015</p>
         </div>
         <p class="lh-large">Website design and development for <a href="http://www.npc.gov.np/human_development_indicators_by_district/" class="dark-gray hover-cl-blue">data visualization</a> built for the Nepal government. Presented at <a href="http://interaction16.ixda.org/session/assisting-nepal-after-the-earthquake-lessons-learned-from-applying-design-thinking-in-a-post-disaster-context/index.html" class="dark-gray hover-cl-blue">Interaction 16</a>.
       </section>
@@ -141,7 +141,7 @@
         <div class="cf mb3">
           <img src="images/abide-icon.png" class="w-icon fl mr3 br-icon shadow-icon">
           <h2 class="fw6">Abide</h2>
-          <p>Carpenters Code. 2015 to 2017.</p>
+          <p>Carpenters Code · 2015 to 2017</p>
         </div>
         <p class="lh-large">Landing page design and development for Christian meditation app.</p>
       </section>
@@ -150,7 +150,7 @@
         <div class="cf mb3">
           <img src="images/ymf-icon.png" class="w-icon fl mr3 br-icon shadow-icon">
           <h2 class="b">You and Me Forever</h2>
-          <p>Crazy Love. 2014 to 2015.</p>
+          <p>Crazy Love · 2014 to 2015</p>
         </div>
         <p class="lh-large">App design for book by bestselling Christian author Francis Chan. Proceeds benefit work against <a href="https://vimeo.com/107938492" class="dark-gray hover-cl-blue">poverty-induced prostitution</a> in Ethiopia.</p>
       </section>
