--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     </script>
   </head>
   <body class="bg-near-white dark-gray">
-    <nav class="gill-sans f6 ttu w-100 bb b--black-10">
+    <nav class="fixed top-0 bg-near-white gill-sans f6 ttu w-100">
       <ul
         class="fw6 list ph4 ph5-ns flex-ns flex-row cl-mw center items-center nowrap overflow-auto"
       >
@@ -52,7 +52,7 @@
         </li>
       </ul>
     </nav>
-    <main class="charter f6 lh-copy cl-mw center pa4 pt4 pa5-ns">
+    <main class="charter f6 lh-copy cl-mw center pa4 pt6 pa5-ns pt6-ns">
       <div class="flex-l items-start">
         <img src="/images/photo.jpg" class="w-100" style="max-width: 24rem;" />
         <div class="flex-auto pt3 pt0-l pl4-l">
