--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </script>
 </head>
 <body class="antialiased" id="particles">
-  <nav class="gill-sans f6 ttu absolute w-100 bg-cl-dark-blue white bb b--white-10 z-1">
+  <nav class="fixed top-0 bg-near-white gill-sans f6 ttu absolute w-100 bg-cl-dark-blue white z-1">
     <ul class="fw6 list ph4 ph5-ns flex-ns flex-row cl-mw center items-center nowrap overflow-auto">
       <li class="dib flex-auto mr4">
         <div class="dib bb bw1 white pv3">
