--- a/posts.html
+++ b/posts.html
@@ -31,7 +31,7 @@
     </script>
   </head>
   <body class="bg-near-white dark-gray">
-    <nav class="gill-sans f6 ttu w-100 bb b--black-10">
+    <nav class="fixed top-0 bg-near-white gill-sans f6 ttu w-100">
       <ul
         class="fw6 list ph4 ph5-ns flex-ns flex-row cl-mw center items-center nowrap overflow-auto"
       >
@@ -55,7 +55,7 @@
         </li>
       </ul>
     </nav>
-    <main class="charter f5 lh-copy cl-mw center pa4 pt4 pa5-ns">
+    <main class="charter f5 lh-copy cl-mw center pa4 pt6 pa5-ns pt6-ns">
       <ul class="list na3">
         {% for post in site.posts %}
         <li class="hover-bg-light-gray">
