--- a/work.html
+++ b/work.html
@@ -19,7 +19,7 @@
   </script>
 </head>
 <body class="bg-near-white dark-gray">
-  <nav class="gill-sans f6 ttu w-100 bb b--black-10 ">
+  <nav class="fixed top-0 bg-near-white gill-sans f6 ttu w-100">
     <ul class="fw6 list ph4 ph5-ns flex-ns flex-row cl-mw center items-center nowrap overflow-auto">
       <li class="dib mr4 flex-auto">
         <a href="/" class="link dark-gray hover-cl-blue pv3"
@@ -41,7 +41,7 @@
       </li>
     </ul>
   </nav>
-  <main class="charter f6 lh-copy cl-mw center pa4 pt4 pa5-ns">
+  <main class="charter f6 lh-copy cl-mw center pa4 pt6 pa5-ns pt6-ns">
     <section class="mb5 pb5 bb b--black-10">
       <p class="f4 f3-ns lh-large mb4">Real decisions aren't simple. I solve complex problems through a combination of <strong class="cl-blue fw6">curiosity</strong>, <strong class="cl-blue fw6">creativity</strong>, and <strong class="cl-blue fw6">analytical decision-making</strong>.</p>
       <div class="cf flex">
