--- a/about.html
+++ b/about.html
@@ -53,50 +53,55 @@
       </ul>
     </nav>
     <main class="charter f6 lh-copy cl-mw center pa4 pt6 pa5-ns pt6-ns">
+      <p class="f4 fw6 f3-ns lh-large mb4">
+        I love the gray areas, connections, and mysteries of life.
+      </p>
       <div class="flex-l items-start">
-        <img src="/images/photo.jpg" class="w-100" style="max-width: 24rem;" />
-        <div class="flex-auto pt3 pt0-l pl4-l">
-          <p class="mb3 f4 f3-ns">
-            I'm a human interested in:
-          </p>
+        <div class="flex-auto pt3 pt0-l pr4-l">
+          <p class="fw6 mb2">I'm particularly interested in:</p>
           <ul class="mb4 list list-hyphen">
             <li class="mv2">
-              Connections between concepts and disciplines
+              Creativity and innovation
             </li>
             <li class="mv2">
-              Creativity, learning, and innovation
+              Constant learning and curiosity
             </li>
             <li class="mv2">
-              Decision-making and psychology
+              How people think and make decisions
             </li>
             <li class="mv2">
               Technology as helpful and harmful
             </li>
             <li class="mv2">
-              Meaning, spirituality, and self-awareness
+              The beauty of the natural world
             </li>
             <li class="mv2">
-              Community, empathy, and justice
+              Big existential, spiritual questions
+            </li>
+            <li class="mv2">
+              Deep, empathetic relationships across boundaries
             </li>
           </ul>
-          <p class="mb2">
-            How I experience the world is shaped by
+          <p class="fw6 mb2">
+            How I experience the world is shaped by the often contrasting
+            influences of:
           </p>
           <ul class="list list-hyphen">
             <li class="mv2">
-              My Christian faith (liturgical / evangelical influences)
+              My Christian faith (liturgical and evangelical influences)
             </li>
             <li class="mv2">
-              My work and residence in Silicon Valley
+              My work and community in Silicon Valley
             </li>
             <li class="mv2">
               My Asian American (Malaysian Chinese) identity
             </li>
             <li class="mv2">
-              My personality (Enneagram 5w6)
+              My personality (Enneagram 5w6 - analytical/introverted)
             </li>
           </ul>
         </div>
+        <img src="/images/photo.jpg" class="w-100" style="max-width: 24rem;" />
       </div>
     </main>
   </body>
