Tweak photo display

--- a/about.html
+++ b/about.html
@@ -56,7 +56,8 @@
       <p class="f4 fw6 f3-ns lh-large mb4">
         I love the gray areas, connections, and mysteries of life.
       </p>
-      <div class="flex-l items-start">
+      <div class="flex-l flex-row-reverse items-start">
+        <img src="/images/photo.jpg" class="w-100" style="max-width: 24rem;" />
         <div class="flex-auto pt3 pt0-l pr4-l">
           <p class="fw6 mb2">I'm particularly interested in:</p>
           <ul class="mb4 list list-hyphen">
@@ -101,7 +102,6 @@
             </li>
           </ul>
         </div>
-        <img src="/images/photo.jpg" class="w-100" style="max-width: 24rem;" />
       </div>
     </main>
   </body>
