--- a/about.html
+++ b/about.html
@@ -53,8 +53,10 @@
       </ul>
     </nav>
     <main class="charter f6 lh-copy cl-mw center pa4 pt6 pa5-ns pt6-ns">
-      <p class="f4 fw6 f3-ns lh-large mb4">
-        I love the gray areas, connections, and mysteries of life.
+      <p class="f4 f3-ns lh-large mb4">
+        I love the <strong class="fw6">gray areas</strong>,
+        <strong class="fw6">connections</strong>, and
+        <strong class="fw6">mysteries</strong> of life.
       </p>
       <div class="flex-l flex-row-reverse items-start">
         <img src="/images/photo.jpg" class="w-100" style="max-width: 24rem;" />
