Add desktop tag groups

--- a/work.html
+++ b/work.html
@@ -84,7 +84,7 @@
       <div class="mt4">
         <div class="mv4 sw-100 bg-black-05 pa3">
           <div class="pa3">
-            <h3 class="fw6">Tabs & tab groups</h3>
+            <h3 class="fw6">Mobile tab groups</h3>
             <p class="lh-large">Even as computing has gone mobile, we often fall back to our desktop computers for complex tasks like buying a new pair of shoes or planning a trip. I led a redesign of Chrome's tabs experience to help you get these things done on the go. Featured on the <a href="https://blog.google/products/chrome/get-more-done-with-google-chrome/" class="dark-gray hover-cl-blue">Google blog</a>.</p>
           </div>
           <div class="flex-l">
@@ -100,10 +100,19 @@
         </div>
       </div>
       <div class="mt4">
+        <div class="mv4 sw-100 bg-black-05 pa3">
+          <div class="pa3">
+            <h3 class="fw6">Desktop tab groups</h3>
+            <p class="lh-large">On desktop, people frequently have dozens of tabs across different tasks open. I led the design of tab groups to help you stay organized. Featured on the <a href="https://blog.google/products/chrome/manage-tabs-with-google-chrome/" class="dark-gray hover-cl-blue">Google blog</a>.</p>
+            <img src="images/chrome-dtg.gif" class="mt2">
+          </div>
+        </div>
+      </div>
+      <div class="mt4">
 
         <div class="mv4 sw-100 bg-black-05 pa3">
           <div class="pa3">
-            <h3 class="fw6">Information architecture</h3>
+            <h3 class="fw6">Mobile information architecture</h3>
             <p class="lh-large">One of Chrome's largest UX challenges is how to scale to a growing feature set while staying simple. I led efforts to redesign Chrome to make core functionality more discoverable - and also easier to reach on larger phones. </p>
           </div>
           <div class="flex-l">
