Disable dark theme invert on home; fix nav layering

--- a/posts.html
+++ b/posts.html
@@ -2,7 +2,7 @@
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="invert-dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -31,7 +31,7 @@
     </script>
   </head>
   <body class="bg-near-white dark-gray">
-    <nav class="fixed top-0 bg-near-white gill-sans f6 ttu w-100">
+    <nav class="fixed top-0 bg-near-white gill-sans f6 ttu w-100 z-1">
       <ul
         class="fw6 list ph4 ph5-ns flex-ns flex-row cl-mw center items-center nowrap overflow-auto"
       >
