--- a/work.html
+++ b/work.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="invert-dark">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,7 +19,7 @@
   </script>
 </head>
 <body class="bg-near-white dark-gray">
-  <nav class="fixed top-0 bg-near-white gill-sans f6 ttu w-100">
+  <nav class="fixed top-0 bg-near-white gill-sans f6 ttu w-100 z-1">
     <ul class="fw6 list ph4 ph5-ns flex-ns flex-row cl-mw center items-center nowrap overflow-auto">
       <li class="dib mr4 flex-auto">
         <a href="/" class="link dark-gray hover-cl-blue pv3"
