Fix unintentional nav vertical scroll

--- a/work.html
+++ b/work.html
@@ -20,7 +20,7 @@
 </head>
 <body class="bg-near-white dark-gray">
   <nav class="fixed top-0 bg-near-white gill-sans f6 ttu w-100 z-1">
-    <ul class="fw6 list ph4 ph5-ns flex-ns flex-row cl-mw center items-center nowrap overflow-auto">
+    <ul class="fw6 list ph4 ph5-ns flex-ns flex-row cl-mw center items-center nowrap overflow-x-auto">
       <li class="dib mr4 flex-auto">
         <a href="/" class="link dark-gray hover-cl-blue pv3"
           ><span class="tracked-mega">Chris Le</span>e</a
