--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body class="antialiased" id="particles">
     <nav class="fixed top-0 bg-near-white gill-sans f6 ttu absolute w-100 bg-cl-dark-blue white z-1">
-      <ul class="fw6 list ph4 ph5-ns flex-ns flex-row cl-mw center items-center nowrap overflow-auto">
+      <ul class="fw6 list ph4 ph5-ns flex-ns flex-row cl-mw center items-center nowrap overflow-x-auto">
         <li class="dib flex-auto mr4">
           <div class="dib bb bw1 white pv3">
             <span class="tracked-mega">Chris Le</span>e
